# galaga-lab

./: .gitignore  README.md  app.py  catalog.yml  dependencies.yml  dependencies_test_2.yml  environment.yml  pyproject.toml  requirements.txt
Backend/: astro_objects.py  galaxy_field_code.py  generate_field.py
Frontend/: frontend_utils.py  interactive.py
Notebooks/: visualize.ipynb
docs/: conf.py  frontend_utils.rst  index.rst
galaga_lab/: app.py  catalog.yml
galaga_lab/Backend/: astro_objects.py  generate_field.py
galaga_lab/Frontend/: frontend_utils.py
tests/: test_calculations.py
