[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
galaga_lab = ["catalog.yml"]

[project]
name = "galaga_lab"
version = "0.1.0"
dependencies = [
    "astropy", 
	"numpy", 
	"dash", 
	"dash_bootstrap_components",
    "Flask", 
	"plotly", 
	"PyYAML",
]
